@@ -1,6 +1,6 @@
-////////////////////////////////////////////////////////////////////////////////
-// checkstyle: Checks Java source code for adherence to a set of rules.
-// Copyright (C) 2001-2017 the original author or authors.
+///////////////////////////////////////////////////////////////////////////////////////////////
+// checkstyle: Checks Java source code and other text files for adherence to a set of rules.
+// Copyright (C) 2001-2023 the original author or authors.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Lesser General Public
@@ -15,7 +15,7 @@
 // You should have received a copy of the GNU Lesser General Public
 // License along with this library; if not, write to the Free Software
 // Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////////////////////////////////////////////////////////////////
 
 package com.puppycrawl.tools.checkstyle.checks.header;
 
@@ -25,70 +25,71 @@ import java.io.InputStreamReader;
 import java.io.LineNumberReader;
 import java.io.Reader;
 import java.io.StringReader;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.nio.charset.UnsupportedCharsetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.regex.Pattern;
 
-import com.google.common.io.Closeables;
+import com.puppycrawl.tools.checkstyle.PropertyType;
+import com.puppycrawl.tools.checkstyle.XdocsPropertyType;
 import com.puppycrawl.tools.checkstyle.api.AbstractFileSetCheck;
 import com.puppycrawl.tools.checkstyle.api.CheckstyleException;
 import com.puppycrawl.tools.checkstyle.api.ExternalResourceHolder;
-import com.puppycrawl.tools.checkstyle.utils.CommonUtils;
+import com.puppycrawl.tools.checkstyle.utils.CommonUtil;
 
 /**
  * Abstract super class for header checks.
  * Provides support for header and headerFile properties.
- * @author o_sukhosolsky
  */
 public abstract class AbstractHeaderCheck extends AbstractFileSetCheck
     implements ExternalResourceHolder {
+
     /** Pattern to detect occurrences of '\n' in text. */
     private static final Pattern ESCAPED_LINE_FEED_PATTERN = Pattern.compile("\\\\n");
 
     /** The lines of the header file. */
     private final List<String> readerLines = new ArrayList<>();
 
-    /** The file that contains the header to check against. */
+    /** Specify the name of the file containing the required header. */
     private URI headerFile;
 
-    /** Name of a charset to use for loading the header from a file. */
-    private String charset = System.getProperty("file.encoding", "UTF-8");
+    /** Specify the character encoding to use when reading the headerFile. */
+    @XdocsPropertyType(PropertyType.STRING)
+    private Charset charset = createCharset(System.getProperty("file.encoding",
+        StandardCharsets.UTF_8.name()));
 
     /**
-     * Hook method for post processing header lines.
+     * Hook method for post-processing header lines.
      * This implementation does nothing.
      */
     protected abstract void postProcessHeaderLines();
 
     /**
      * Return the header lines to check against.
+     *
      * @return the header lines to check against.
      */
     protected List<String> getHeaderLines() {
-        final List<String> copy = new ArrayList<>(readerLines);
-        return Collections.unmodifiableList(copy);
+        return List.copyOf(readerLines);
     }
 
     /**
-     * Set the charset to use for loading the header from a file.
-     * @param charset the charset to use for loading the header from a file
-     * @throws UnsupportedEncodingException if charset is unsupported
+     * Setter to specify the charset to use when reading the headerFile.
+     *
+     * @param charset the charset name to use for loading the header from a file
      */
-    public void setCharset(String charset) throws UnsupportedEncodingException {
-        if (!Charset.isSupported(charset)) {
-            final String message = "unsupported charset: '" + charset + "'";
-            throw new UnsupportedEncodingException(message);
-        }
-        this.charset = charset;
+    public void setCharset(String charset) {
+        this.charset = createCharset(charset);
     }
 
     /**
-     * Set the header file to check against.
+     * Setter to specify the name of the file containing the required header..
+     *
      * @param uri the uri of the header to load.
      * @throws CheckstyleException if fileName is empty.
      */
@@ -104,27 +105,24 @@ public abstract class AbstractHeaderCheck extends AbstractFileSetCheck
 
     /**
      * Load the header from a file.
+     *
      * @throws CheckstyleException if the file cannot be loaded
      */
     private void loadHeaderFile() throws CheckstyleException {
         checkHeaderNotInitialized();
-        Reader headerReader = null;
-        try {
-            headerReader = new InputStreamReader(new BufferedInputStream(
-                    headerFile.toURL().openStream()), charset);
+        try (Reader headerReader = new InputStreamReader(new BufferedInputStream(
+                    headerFile.toURL().openStream()), charset)) {
             loadHeader(headerReader);
         }
         catch (final IOException ex) {
             throw new CheckstyleException(
                     "unable to load header file " + headerFile, ex);
         }
-        finally {
-            Closeables.closeQuietly(headerReader);
-        }
     }
 
     /**
      * Called before initializing the header.
+     *
      * @throws IllegalArgumentException if header has already been set
      */
     private void checkHeaderNotInitialized() {
@@ -136,56 +134,66 @@ public abstract class AbstractHeaderCheck extends AbstractFileSetCheck
     }
 
     /**
+     * Creates charset by name.
+     *
+     * @param name charset name
+     * @return created charset
+     * @throws UnsupportedCharsetException if charset is unsupported
+     */
+    private static Charset createCharset(String name) {
+        if (!Charset.isSupported(name)) {
+            final String message = "unsupported charset: '" + name + "'";
+            throw new UnsupportedCharsetException(message);
+        }
+        return Charset.forName(name);
+    }
+
+    /**
      * Set the header to check against. Individual lines in the header
      * must be separated by '\n' characters.
+     *
      * @param header header content to check against.
      * @throws IllegalArgumentException if the header cannot be interpreted
      */
     public void setHeader(String header) {
-        if (!CommonUtils.isBlank(header)) {
+        if (!CommonUtil.isBlank(header)) {
             checkHeaderNotInitialized();
 
             final String headerExpandedNewLines = ESCAPED_LINE_FEED_PATTERN
                     .matcher(header).replaceAll("\n");
 
-            final Reader headerReader = new StringReader(headerExpandedNewLines);
-            try {
+            try (Reader headerReader = new StringReader(headerExpandedNewLines)) {
                 loadHeader(headerReader);
             }
             catch (final IOException ex) {
                 throw new IllegalArgumentException("unable to load header", ex);
-            }
-            finally {
-                Closeables.closeQuietly(headerReader);
             }
         }
     }
 
     /**
      * Load header to check against from a Reader into readerLines.
+     *
      * @param headerReader delivers the header to check against
      * @throws IOException if
      */
     private void loadHeader(final Reader headerReader) throws IOException {
-        readerLines.clear();
-        final LineNumberReader lnr = new LineNumberReader(headerReader);
-        while (true) {
-            final String line = lnr.readLine();
-            if (line == null) {
-                break;
-            }
-            readerLines.add(line);
+        try (LineNumberReader lnr = new LineNumberReader(headerReader)) {
+            String line;
+            do {
+                line = lnr.readLine();
+                if (line != null) {
+                    readerLines.add(line);
+                }
+            } while (line != null);
+            postProcessHeaderLines();
         }
-        postProcessHeaderLines();
     }
 
     @Override
     protected final void finishLocalSetup() throws CheckstyleException {
         if (headerFile != null) {
             loadHeaderFile();
-        }
-        if (readerLines.isEmpty()) {
-            setHeader(null);
         }
     }
 
@@ -202,4 +210,5 @@ public abstract class AbstractHeaderCheck extends AbstractFileSetCheck
 
         return result;
     }
+
 }
